# ats-scanner

./: .env.example  .gitignore  .prettierignore  .prettierrc  LICENSE  README.md  STATUS_STATE_UPDATE.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  setup.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: debug.yml  deploy-docs.yml  minimal-test.yml  release.yml  simple-release.yml
database/: init.sql
docs/: 404.html  README.md  _config.yml  index.html  robots.txt
e2e/: app-startup.spec.ts  optimization-workflow.spec.ts  resume-analysis.spec.ts  user-preferences.spec.ts
scripts/: build-all-platforms.sh  build-release.sh  init-db.js  setup-signing.sh  setup.js  test-db.js  test-ollama.js
server/: index.js
server/routes/: analyze.js  resumes.js  scans.js
server/services/: ollamaService.js  professionalScoringService.js  scoringService.js
server/utils/: database.js  fileProcessor.js
src/: App.tsx  MinimalTest.tsx  TestApp.tsx  index.css
src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: achievement_analyzer.rs  advanced_scoring.rs  ats_simulator.rs  commands.rs  competitive_analyzer.rs  config.rs  context_aware_matcher.rs  database.rs  document.rs  dynamic_keyword_db.rs  enhanced_prompts.rs  enhanced_scoring.rs  errors.rs  format_checker.rs  format_issue_detector.rs  industry_analyzer.rs  lib.rs  main.rs  memory_manager.rs  migrations.rs  ml_insights.rs  ml_optimization_engine.rs  models.rs  modern_keyword_extractor.rs  ollama.rs  plugin_system.rs  realtime_optimizer.rs  scoring.rs  semantic_analyzer.rs  skill_relationship_mapper.rs  smart_optimizer.rs  testing_framework.rs  utils.rs
src-tauri/tests/: phase1_integration_test.rs  phase2_integration_test.rs
src/components/: ErrorBoundary.tsx  LoadingStates.tsx  Notifications.tsx  UpdateChecker.tsx  VirtualizedTable.tsx
src/components/Common/: ErrorMessage.tsx  LoadingSpinner.tsx  ScoreCircle.tsx
src/components/Dashboard/: ResumeCard.tsx  ResumeHistory.tsx
src/components/Results/: AnalysisResults.tsx  ProfessionalAnalysisResults.tsx  ProfessionalScoringBreakdown.tsx  ResumeParsingDisplay.tsx
src/components/Upload/: FileUpload.tsx  JobDescriptionInput.tsx  ModelSelector.tsx
src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
src/components/pages/: AnalysisPage.tsx  AnalysisResultPage.tsx  CareerDevelopmentPage.tsx  Dashboard.tsx  HistoryPage.tsx  JobsPage.tsx  OptimizationPage.tsx  PersonalAnalyticsPage.tsx  ResultsPage.tsx  ResumeWritingAssistant.tsx  SettingsPage.tsx
src/components/ui/: AchievementSuggestions.tsx  BulletPointAnalyzer.tsx  FileUpload.tsx  FormatHealthDashboard.tsx  IndustryKeywordManager.tsx  alert-dialog.tsx  badge.tsx  button.tsx  error-boundary.tsx  file-preview.tsx  label.tsx  progress.tsx  select.tsx  separator.tsx  switch.tsx
src/contexts/: NotificationContext.tsx
src/hooks/: use-toast.ts  useApiErrorHandler.ts  useAsyncOperation.ts  useCache.ts  useFormValidation.ts  useLoadingState.ts  useNotifications.ts  useRetry.ts  useUserPreferences.ts
src/lib/: button-variants.ts
src/pages/: Dashboard.tsx  NewScan.tsx  ResultsView.tsx
src/store/: useAppStore.ts
src/test/: AnalysisPage.test.tsx  NewComponents.test.tsx  OptimizationPage.test.tsx  setup.test.tsx  setup.ts  test-providers.tsx  utils.tsx
src/types/: api.ts  index.ts
src/utils/: api.ts  helpers.ts
