[package]
name = "ats-scanner"
version = "1.0.0"
description = "Local ATS Scanner using Ollama models"
authors = ["ATS Scanner Team"]
license = "MIT"
repository = "https://github.com/your-org/ats-scanner"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.6", features = [ "path-all", "fs-write-file", "fs-remove-dir", "fs-exists", "dialog-save", "fs-remove-file", "dialog-open", "fs-read-dir", "shell-open", "fs-create-dir", "fs-rename-file", "fs-copy-file", "fs-read-file", "notification-all"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
pdf-extract = "0.7"
# docx = "1.1"  # Temporarily removed due to jetscii compatibility issues
encoding_rs = "0.8"
regex = "1.10"
once_cell = "1.19"
futures = "0.3"
async-trait = "0.1"
mime_guess = "2.0"
base64 = "0.21"
sha2 = "0.10"
tempfile = "3.8"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "ats_scanner"
path = "src/lib.rs"

[[bin]]
name = "ats-scanner"
path = "src/main.rs"

