[package]
name = "ats-scanner"
version = "1.1.0"
description = "Local ATS Scanner using Ollama models"
authors = ["ATS Scanner Team"]
license = "MIT"
repository = "https://github.com/your-org/ats-scanner"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tauri = { version = "1.6", features = [ "path-all", "fs-write-file", "fs-remove-dir", "fs-exists", "dialog-save", "fs-remove-file", "dialog-open", "fs-read-dir", "shell-open", "fs-create-dir", "fs-rename-file", "fs-copy-file", "fs-read-file", "notification-all"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
pdf-extract = "0.7"
zip = "0.6"
quick-xml = "0.31"
encoding_rs = "0.8"
regex = "1.10"
once_cell = "1.19"
futures = "0.3"
async-trait = "0.1"
mime_guess = "2.0"
base64 = "0.21"
sha2 = "0.10"
tempfile = "3.8"
dirs = "5.0"
rust-stemmers = "1.2"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
# Enhanced document processing
lopdf = "0.32"
calamine = "0.22"
docx-rs = "0.4"
rtf-parser = "0.3"
# OCR support (optional)
tesseract = { version = "0.14", optional = true }
image = { version = "0.24", optional = true }
# Text analysis
readability = "0.1"
# Date parsing
dateparser = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
ocr = ["tesseract", "image"]

[lib]
name = "ats_scanner"
path = "src/lib.rs"

[[bin]]
name = "ats-scanner"
path = "src/main.rs"

